TableInfo: ensure ExprColumn dependent columns are referenced